vlib/v/checker/tests/wrong_struct_declare1_err.out
vlib/v/checker/tests/wrong_struct_declare1_err.vv:5:13: error: unexpected name `foos`, expecting `:`
    3 | 
    4 | struct Bar {
    5 |         mut foos []Foo
      |             ~~~~
    6 | }
