vlib/v/checker/tests/wrong_struct_declare1_err.vv
struct Foo {
}

struct Bar {
        mut foos []Foo
}
